@@ -1,1 +1,5 @@
 # Grupo_06
+- Este proyecto funciona en Java 20 y JavaFx 20 por lo que si llega a presentar problemas con algunas dependencias, debe cambiar en las propiedades de proyecto dentro de las opciones VM en run su ruta a las librerias de JavaFx.
+
+- Adicionalmente es necesrio agregar esta línea "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED" 
+dentro de las opciones del VM run.# Grupo_06
